--- a/ApiAWSComicsMySql/ApiAWSComicsMySql.csproj
+++ b/ApiAWSComicsMySql/ApiAWSComicsMySql.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="8.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 </Project>
